Fix testimonial contrast ratio

--- a/style.css
+++ b/style.css
@@ -4,15 +4,19 @@
 
 :root {
   /* 🎨 Paleta de colores */
-  --color-bg: #F9F7F5;
-  --color-btnd: #253028;
-  --color-text: #111111;
-  --color-text-alt: #FAFAFA;
-  --color-border: #212121;
-  --swiss-almond: #E5DACDFF;
-  --quiet-drizzle: #B8D0C1FF;
-  --pale-dogwood: #EBCAC2FF;
-  --canyon-peach: #EDDBCCFF;
+  --color-bg: oklab(97.913% 0 -0.00011);
+  --color-btnd: lab(18.63% -6.71 3.59);
+  --color-text: oklab(17.764% 0 -0.00002);
+  --color-text-alt: oklab(98.51100000000001% 0 -0.00011);
+  --color-border: oklab(24.776% 0 -0.00003);
+  --swiss-almond: oklab(89.361% 0.00654 0.0202);
+  --swiss-almond-text: oklab(57.07% 0.01568 0.0502);
+  --quiet-drizzle: oklab(83.541% -0.03073 0.0122);
+  --quiet-drizzle-text: oklab(49.557% -0.04706 0.02199); 
+  --pale-dogwood: oklab(86.48% 0.03247 0.02168);
+  --pale-dogwood-text: oklab(62.356% 0.04352 0.03713);
+  --canyon-peach: oklab(90.196% 0.0132 0.02502);
+  --canyon-peach-text: oklab(69.20500000000001% 0.02269 0.06706);
 
 
   /* ✍️ Tipografía */
@@ -654,7 +658,7 @@ header {
   line-height: 1.5;
 
   & :nth-child(2){
-    font-weight: var(--bold);
+    font-weight: 600;
   }
 }
 
@@ -672,7 +676,6 @@ header {
   }
 }
 
-
 .carrusel_testimonio {
   line-height: 2;
   width: 60ch;
@@ -680,6 +683,25 @@ header {
   scroll-snap-align: center;
 }
 
+#juliet p {
+  color: var(--swiss-almond-text);
+  font-weight: var(--medium);
+}
+
+#matthew p {
+  color: var(--quiet-drizzle-text);
+  font-weight: var(--medium);
+}
+
+#sandra p {
+  color: var(--pale-dogwood-text);
+  font-weight: var(--medium);
+}
+
+#andy p {
+  color: var(--canyon-peach-text);
+  font-weight: var(--medium);
+}
 
 
 
